fix the overflow issue

--- a/src/app/todo/todo.component.scss
+++ b/src/app/todo/todo.component.scss
@@ -1,4 +1,5 @@
 @import 'settings/index';
+@import 'tools/index';
 
 :host {
   --side-pad: 25px;
@@ -9,7 +10,16 @@
   margin: 60px auto;
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.15);
   border-radius: 3px;
+  background-color: #ffffff;
   overflow: hidden;
+
+  @include mobile-only {
+    box-shadow: none;
+    border-radius: 0;
+    max-width: none;
+    margin: 0;
+    padding-bottom: 100px;
+  }
 }
 
 .today-widget {
@@ -19,7 +29,6 @@
 
 .todo-list {
   min-height: 150px;
-  background-color: #ffffff;
 }
 
 .todo-item {
@@ -34,6 +43,16 @@
   font-size: 32px;
   font-weight: 300;
   box-shadow: 0px 0px 10px 0px #ffb8b9;
+
+  @include mobile-only {
+    position: fixed;
+    top: initial;
+    bottom: 30px;
+    right: 30px;
+    width: 50px;
+    height: 50px;
+    font-size: 40px;
+  }
 }
 
 .btn-empty-add {
