--- a/src/assets/scss/components/checkbox.scss
+++ b/src/assets/scss/components/checkbox.scss
@@ -6,7 +6,7 @@
 
   .text {
     padding-left: 32px;
-    display: inline-block;
+    display: block;
     user-select: none;
 
     &::before,
