--- a/src/assets/scss/utilities/typography.scss
+++ b/src/assets/scss/utilities/typography.scss
@@ -44,3 +44,11 @@ h6,
 .text-center {
   text-align: center;
 }
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.overflow-ellipsis {
+  @include overflow-ellipsis;
+}
